ViewModel and RecyclerView implemented

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation">
+    android:id="@+id/navigation"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:label="nav"
+    app:startDestination="@id/titleFragment">
+    <fragment
+        android:id="@+id/titleFragment"
+        android:name="com.georgv.audioworkstation.ui.main.MainFragment"
+        android:label="Main_Fragment"
+        tools:layout="@layout/main_fragment">
+
+    </fragment>
 
 </navigation>
