--- a/app/src/main/res/layout/fragment_effect.xml
+++ b/app/src/main/res/layout/fragment_effect.xml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.main.EffectFragment">
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp" >
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+            android:layout_height="100dp"
+            android:layout_alignParentTop="true"
+            >
 
-</FrameLayout>
+        <Switch
+                android:text="@string/applyeffect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/switch2"
+                android:layout_gravity="bottom"
+                android:minHeight="48dp" />
+
+        <TextView
+                android:text="@string/reverb"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="40dp" />
+    </androidx.cardview.widget.CardView>
+
+
+    <ImageButton
+            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/applyAllEffect"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="45dp"
+            android:contentDescription="@string/applyeffects"
+            android:minHeight="48dp"
+            android:backgroundTint="@color/blue"
+            android:backgroundTintMode="add" />
+</RelativeLayout>
+
