--- a/app/src/main/res/layout/fragment_effect.xml
+++ b/app/src/main/res/layout/fragment_effect.xml
@@ -1,15 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="16dp"
         android:paddingRight="16dp" >
 
+    <TextView
+            android:text=""
+            android:textSize="50sp"
+            android:layout_width="368dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:id="@+id/trackName"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="16dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="16dp"
+            app:lineHeight="80dp"
+            app:fontFamily="serif-monospace" />
+
+
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_alignParentTop="true"
-            >
+            android:layout_marginTop="26dp"
+            android:layout_below="@+id/trackName">
 
         <Switch
                 android:text="@string/applyeffect"
@@ -25,7 +41,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp" />
     </androidx.cardview.widget.CardView>
-
 
     <ImageButton
             android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
