--- a/app/src/main/res/layout/track_holder_view.xml
+++ b/app/src/main/res/layout/track_holder_view.xml
@@ -12,32 +12,31 @@
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="65dp">
+            android:layout_width="match_parent"
+            android:layout_height="70dp">
 
         <TextView
-            android:id="@+id/instrumentText"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:shadowColor="@color/white"
-            android:shadowRadius="6"
-            android:text=""
-            app:drawableTint="#9DF197"
-            app:fontFamily="monospace"
-            android:textSize = "15sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="parent" />
+                android:id="@+id/instrumentText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:shadowColor="@color/white"
+                android:shadowRadius="6"
+                android:text=""
+                app:drawableTint="#9DF197"
+                app:fontFamily="monospace"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toStartOf="@+id/effectsButton"
+                app:layout_constraintStart_toEndOf="@+id/volumeButton"
+                app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_baseline_music_note_24" />
+                android:id="@+id/volumeButton"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/baseline_volume_up_24" />
 
         <ImageView
                 android:id="@+id/deleteButton"
@@ -46,7 +45,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_baseline_delete_24"
-                app:layout_constraintEnd_toEndOf="@+id/instrumentText" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
         <ImageView
                 android:id="@+id/effectsButton"
@@ -58,6 +57,26 @@
                 app:layout_constraintVertical_bias="0.0"
                 app:layout_constraintEnd_toStartOf="@+id/deleteButton"
                 android:layout_marginEnd="15dp" />
+
+        <com.google.android.material.slider.Slider
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:valueFrom="0"
+                android:valueTo="100"
+                android:id="@+id/slider"
+                app:haloColor="#BDB8B8"
+                app:haloRadius="10dp"
+                app:thumbColor="#000000"
+                app:trackColorActive="#000000"
+                app:trackColorInactive="#E3E3E3"
+                app:layout_constraintStart_toEndOf="@+id/volumeButton"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/effectsButton"
+                android:layout_marginTop="2dp"
+                app:layout_constraintTop_toBottomOf="@+id/instrumentText"
+                android:visibility="invisible">
+
+        </com.google.android.material.slider.Slider>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
