--- a/app/src/main/res/layout/fragment_effect.xml
+++ b/app/src/main/res/layout/fragment_effect.xml
@@ -6,6 +6,27 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp" >
 
+    <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_above="@+id/applyAllEffect"
+            android:layout_marginBottom="253dp">
+
+        <Switch
+                android:text="@string/applyeffect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/switchEQ"
+                android:layout_gravity="bottom"
+                android:minHeight="48dp" />
+
+        <TextView
+                android:text="@string/reverb"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="40dp" />
+    </androidx.cardview.widget.CardView>
+
     <TextView
             android:text=""
             android:textSize="50sp"
@@ -31,7 +52,7 @@
                 android:text="@string/applyeffect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/switch2"
+                android:id="@+id/switchReverb"
                 android:layout_gravity="bottom"
                 android:minHeight="48dp" />
 
