--- a/app/src/main/res/layout/track_list_fragment.xml
+++ b/app/src/main/res/layout/track_list_fragment.xml
@@ -5,29 +5,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:background="@color/white">
 
 
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center">
+            android:background="@color/yellow"
+            android:elevation="2dp"
+            android:gravity="right"
+            android:padding="5dp">
 
         <TextView
-                android:text=""
-                android:textSize="22sp"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:text="Test"
+                android:textSize="34sp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:id="@+id/songName"
-                android:layout_marginEnd="15dp"
-                android:layout_weight="0.9"
-                android:gravity="center" />
+                android:gravity="center"
+                android:fontFamily="serif-monospace"
+                android:layout_margin="10dp" />
 
         <ImageButton
                 android:id="@+id/saveSongButton"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:src="@drawable/ic_baseline_save_24"
                 app:layout_constrainedHeight="false"
                 app:layout_constrainedWidth="false"
@@ -39,13 +43,15 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.9"
+            android:layout_weight="1"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/buttonView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_margin="5dp"
+            android:background="@color/yellow">
 
         <ProgressBar
                 android:id="@+id/indeterminateBar"
@@ -58,7 +64,9 @@
                 android:id="@+id/trackListRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="visible">
+                android:visibility="visible"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center">
 
         </androidx.recyclerview.widget.RecyclerView>
 
@@ -68,12 +76,12 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/buttonLayout"
-            android:layout_weight="0.1">
+            android:layout_weight="0.15">
 
         <ImageButton
                 android:id="@+id/pauseButton"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:minHeight="48dp"
                 android:src="@drawable/ic_baseline_pause_24"
                 app:layout_constraintTop_toTopOf="parent"
@@ -81,12 +89,13 @@
                 app:layout_constraintEnd_toStartOf="@+id/recordButton"
                 android:layout_marginEnd="15dp"
                 android:visibility="invisible"
-                android:contentDescription="@string/PAUSE"/>
+                android:contentDescription="@string/PAUSE"
+                style="@android:style/Widget.ImageButton" />
 
         <ImageButton
                 android:id="@+id/recordButton"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:minHeight="48dp"
                 android:src="@drawable/ic_baseline_fiber_manual_record_24"
                 app:layout_constraintTop_toTopOf="parent"
@@ -94,12 +103,14 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:visibility="visible"
-                android:contentDescription="@string/REC" />
+                android:contentDescription="@string/REC"
+                style="@android:style/Widget.ImageButton"
+                android:scaleType="centerInside" />
 
         <ImageButton
                 android:id="@+id/stopButton"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:minHeight="48dp"
                 android:src="@drawable/ic_baseline_stop_24"
                 app:layout_constraintTop_toTopOf="parent"
@@ -107,12 +118,13 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:visibility="invisible"
-                android:contentDescription="@string/STOP" />
+                android:contentDescription="@string/STOP"
+                style="@android:style/Widget.ImageButton" />
 
         <ImageButton
                 android:id="@+id/playButton"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:minHeight="60dp"
                 app:flow_horizontalAlign="center"
                 android:src="@drawable/ic_baseline_play_arrow_24"
@@ -121,7 +133,8 @@
                 app:layout_constraintStart_toEndOf="@+id/recordButton"
                 android:layout_marginStart="15dp"
                 android:visibility="invisible"
-                android:contentDescription="@string/PLAY" />
+                android:contentDescription="@string/PLAY"
+                style="@android:style/Widget.ImageButton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
