--- a/app/src/main/res/drawable/ic_baseline_stop_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_stop_24.xml
@@ -3,8 +3,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:tint="#000000">
   <path
-      android:fillColor="@android:color/white"
+      android:fillColor="@color/yellow"
       android:pathData="M6,6h12v12H6z"/>
 </vector>
