--- a/app/src/main/res/layout/track_holder_view.xml
+++ b/app/src/main/res/layout/track_holder_view.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/trackView"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="2dp"
-    android:layout_marginTop="2dp"
-    android:layout_marginEnd="2dp"
-        app:cardCornerRadius="5dp"
-    tools:context=".MainActivity">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/trackView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:context=".MainActivity"
+        app:cardElevation="5dp"
+        android:layout_margin="5dp"
+        app:cardBackgroundColor="@color/blue">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp">
+            android:layout_height="100dp"
+            android:padding="5dp">
 
         <TextView
                 android:id="@+id/instrumentText"
@@ -40,7 +40,7 @@
 
         <ImageView
                 android:id="@+id/deleteButton"
-                android:layout_width="50dp"
+                android:layout_width="40dp"
                 android:layout_height="match_parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -49,14 +49,14 @@
 
         <ImageView
                 android:id="@+id/effectsButton"
-                android:layout_width="50dp"
+                android:layout_width="40dp"
                 android:layout_height="match_parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_icon_effects"
                 app:layout_constraintVertical_bias="0.0"
                 app:layout_constraintEnd_toStartOf="@+id/deleteButton"
-                android:layout_marginEnd="15dp" />
+                android:layout_marginEnd="10dp" />
 
         <com.google.android.material.slider.Slider
                 android:layout_width="0dp"
