--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="redTransparent">#C3FF0909</color>
-    <color name="blue">#4189FFFB</color>
-    <color name="green">#3BDF3F</color>
+    <color name="redTransparent">#FF3E3E</color>
+    <color name="blue">#6FEFFF</color>
+    <color name="blueDarker">#2196F3</color>
+    <color name="green">#07FF96</color>
+    <color name="yellow">#FDFFEF</color>
 
 </resources>
