--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="blueDarker">#2196F3</color>
     <color name="green">#07FF96</color>
     <color name="yellow">#FDFFEF</color>
+    <color name="darkRed">#BF2F2F</color>
 
 </resources>
