--- a/app/src/main/res/layout/track_list_fragment.xml
+++ b/app/src/main/res/layout/track_list_fragment.xml
@@ -128,7 +128,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:visibility="invisible"
                 android:contentDescription="@string/STOP"
-                style="@android:style/Widget.ImageButton" />
+                style="@android:style/Widget.ImageButton"
+                android:background="@color/blue" />
 
         <ImageButton
                 android:id="@+id/playButton"
