--- a/app/src/main/res/drawable/ic_baseline_stop_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_stop_24.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="24"
     android:tint="#000000">
   <path
-      android:fillColor="@color/yellow"
+      android:fillColor="@color/black"
       android:pathData="M6,6h12v12H6z"/>
 </vector>
