--- a/app/src/main/res/layout/track_holder_view.xml
+++ b/app/src/main/res/layout/track_holder_view.xml
@@ -7,8 +7,7 @@
         android:layout_height="wrap_content"
         tools:context=".MainActivity"
         app:cardElevation="5dp"
-        android:layout_margin="5dp"
-        app:cardBackgroundColor="@color/blue">
+        android:layout_margin="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
